--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.13.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
+    "d3": "^3.5.6",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
@@ -17,6 +18,7 @@
     "express-session": "^1.11.3",
     "mongoose": "^4.1.9",
     "morgan": "~1.6.1",
+    "node-bourbon": "^4.2.3",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
