--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "mongoose": "^4.1.9",
     "morgan": "~1.6.1",
     "node-bourbon": "^4.2.3",
+    "node-sass": "^3.3.3",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
-
 }
