--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.13.1",
     "express-ejs-layouts": "^1.1.0",
     "express-session": "^1.11.3",
+    "method-override": "^2.3.5",
     "mongoose": "^4.1.9",
     "morgan": "~1.6.1",
     "node-bourbon": "^4.2.3",
